<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ShoppingActivity">

    <TextView
        android:id="@+id/tvwellcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a2label1"
        android:layout_gravity="right"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="20sp"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/textView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a2label2"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="20sp"
        android:textSize="18sp"
        android:textColor="@color/colorBl"
        />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:stretchColumns="1">

        <TableRow>
            <ImageView
                android:id="@+id/imageView01"
                android:layout_width="150sp"
                android:layout_height="150sp"
                android:src="@drawable/electronics"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10sp"
                android:layout_column="0"
                android:layout_marginRight="10sp"
                android:layout_marginLeft="5sp"
                android:autoLink="all"
                android:clickable="true"
                android:onClick="ElectronicClic"

                />
            <ImageView
                android:id="@+id/imageView02"
                android:layout_width="150sp"
                android:layout_height="150sp"
                android:src="@drawable/clothing"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10sp"
                android:layout_column="1"
                android:layout_marginRight="5sp"
                android:layout_marginLeft="10sp"
                android:autoLink="all"
                android:clickable="true"
                android:onClick="ClothingClic"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/textView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a2label3"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10sp"
                android:layout_column="0"
                android:layout_marginRight="10sp"
                android:layout_marginLeft="5sp"
                android:textSize="18sp"
                android:textColor="@color/colorBl"
                android:autoLink="all"
                android:clickable="true"
                android:onClick="showm1"
                />
            <TextView
                android:id="@+id/textView04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a2label4"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10sp"
                android:layout_column="1"
                android:layout_marginRight="5sp"
                android:layout_marginLeft="10sp"
                android:textSize="18sp"
                android:textColor="@color/colorBl"
                android:autoLink="all"
                android:clickable="true"
                android:onClick="showm2"
                />
        </TableRow>
        <TableRow>
            <ImageView
                android:id="@+id/imageView03"
                android:layout_width="150sp"
                android:layout_height="150sp"
                android:src="@drawable/beauty"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10sp"
                android:layout_column="0"
                android:layout_marginRight="10sp"
                android:layout_marginLeft="5sp"
                android:autoLink="all"
                android:clickable="true"
                android:onClick="BeautyClic"
                />
            <ImageView
                android:id="@+id/imageView04"
                android:layout_width="150sp"
                android:layout_height="150sp"
                android:src="@drawable/food"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10sp"
                android:layout_column="1"
                android:layout_marginRight="5sp"
                android:layout_marginLeft="10sp"
                android:autoLink="all"
                android:clickable="true"
                android:onClick="FoodClic"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/textView05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a2label5"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10sp"
                android:layout_column="0"
                android:layout_marginRight="10sp"
                android:layout_marginLeft="5sp"
                android:textSize="18sp"
                android:textColor="@color/colorBl"
                android:autoLink="all"
                android:clickable="true"
                android:onClick="showm3"
                />
            <TextView
                android:id="@+id/textView06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a2label6"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10sp"
                android:layout_column="1"
                android:layout_marginRight="5sp"
                android:layout_marginLeft="10sp"
                android:textSize="18sp"
                android:textColor="@color/colorBl"
                android:autoLink="all"
                android:clickable="true"
                android:onClick="showm4"
                />
        </TableRow>
    </TableLayout>
</LinearLayout>